--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://atomweekly.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+url: http://atomweekly.com
+title: Atom Weekly
+subtitle: Newsletter For Github's Atom Editor
+author: Chris Schneider
 simple_search: https://www.google.com/search
 description:
 
@@ -41,9 +41,9 @@ rdiscount:
     - smart
 pygments: false # default python pygments have been replaced by pygments.rb
 
-paginate: 10          # Posts per page on the blog index
-pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
-recent_posts: 5       # Posts in the sidebar Recent Posts section
+paginate: 10                    # Posts per page on the blog index
+pagination_dir: archive         # Directory base for pagination URLs eg. /blog/page/2/
+recent_posts: 5                 # Posts in the sidebar Recent Posts section
 excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 
 titlecase: true       # Converts page and post titles to titlecase
